--- a/src/App.css
+++ b/src/App.css
@@ -8,4 +8,11 @@ top: 53px;
 border-radius: 8px;
 background: #23252C;
 }
+.apic{
+  position: relative;
+  width: 500px;
+  height: 449px;
+  left: 1055px;
+  top: 53px;
+}
 
